--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0",
+    "firebase": "^5.8.5",
+    "react-native-gifted-chat": "^0.7.2",
     "react-navigation": "^2.3.1"
   },
   "private": true
