--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
   "devDependencies": {
     "babel-preset-expo": "^5.0.0",
     "firebase": "^5.8.5",
+    "react-native-elements": "^0.19.0",
     "react-native-gifted-chat": "^0.7.2",
-    "react-navigation": "^2.3.1"
+    "react-navigation": "^2.3.1",
+    "react-redux": "^6.0.1",
+    "redux": "^4.0.1"
   },
   "private": true
 }
