--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0",
+    "emoji-mart": "^2.11.0",
     "firebase": "^5.8.5",
     "react-native-elements": "^0.19.0",
     "react-native-gifted-chat": "^0.7.2",
