--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-preset-expo": "^5.0.0",
     "emoji-mart": "^2.11.0",
     "firebase": "^5.8.5",
+    "native-base": "^2.12.1",
     "react-native-elements": "^0.19.0",
     "react-native-gifted-chat": "^0.7.2",
     "react-navigation": "^2.3.1",
